Solved the issue of edit button not visible on posts of profile page. Removed blue highlights when user clicks on a footer page and the logo

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,8 @@
 @import '../node_modules/@material/react-dialog/dist/dialog.css';
 
 .noselect {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
      -khtml-user-select: none; /* Konqueror HTML */
